@@ -1,4 +1,5 @@
 1.9.1
+* Client/WebIO: shows New York Agreement support related info in "Block" and "Miners" tabs
 * Client: "SaveOnDisk" config option for "TXPool" and "AllBalances" (defaults to false)
 * Client: save mempool on exit and load in on startup
 * Client: on close save all balances to "balances.db" (for quicker start next time)
